kubernetes-gateway-api-hands-on/exercises/09-final-challenge/exercise/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: production-gateway
  namespace: infra
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: app.final.gateway.local
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: allowed
    - name: https
      protocol: ________
      port: ________
      hostname: app.final.gateway.local
      tls:
        mode: ________
        certificateRefs:
          - name: ________
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: allowed
