kubernetes-gateway-api-hands-on/exercises/09-final-challenge/exercise/02-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: final-http-redirect
  namespace: team-a
spec:
  parentRefs:
    - name: production-gateway
      namespace: infra
      sectionName: ________
  hostnames:
    - app.final.gateway.local
  rules:
    - filters:
        - type: ________
          requestRedirect:
            scheme: ________
            port: 443
            statusCode: ________
